feat: implemented Invoice Management BC with DDD and CQRS

--- a/src/API/InvoiceProcessingPlatform.API/InvoiceProcessingPlatform.API.csproj
+++ b/src/API/InvoiceProcessingPlatform.API/InvoiceProcessingPlatform.API.csproj
@@ -8,6 +8,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Shared.Application\Shared.Application.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.Infrastructure\Shared.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Modules\InvoiceManagement\InvoiceManagement.Application\InvoiceManagement.Application.csproj" />
+    <ProjectReference Include="..\..\Modules\InvoiceManagement\InvoiceManagement.Infrastructure\InvoiceManagement.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
