--- a/src/Modules/InvoiceManagement/InvoiceManagement.Application/InvoiceManagement.Application.csproj
+++ b/src/Modules/InvoiceManagement/InvoiceManagement.Application/InvoiceManagement.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared.Application\Shared.Application.csproj" />
+    <ProjectReference Include="..\InvoiceManagement.Domain\InvoiceManagement.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
