--- a/src/Modules/PaymentTracking/PaymentTracking.Infrastructure/PaymentTracking.Infrastructure.csproj
+++ b/src/Modules/PaymentTracking/PaymentTracking.Infrastructure/PaymentTracking.Infrastructure.csproj
@@ -6,4 +6,20 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared.Domain\Shared.Domain.csproj" />
+    <ProjectReference Include="..\..\..\Shared\Shared.Infrastructure\Shared.Infrastructure.csproj" />
+    <ProjectReference Include="..\PaymentTracking.Domain\PaymentTracking.Domain.csproj" />
+    <ProjectReference Include="..\PaymentTracking.Application\PaymentTracking.Application.csproj" />
+  </ItemGroup>
+
 </Project>
