--- a/src/API/InvoiceProcessingPlatform.API/appsettings.json
+++ b/src/API/InvoiceProcessingPlatform.API/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "InvoiceDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True"
+    "InvoiceDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True",
+    "PaymentDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True"
   }
 }
