--- a/src/API/InvoiceProcessingPlatform.API/InvoiceProcessingPlatform.API.csproj
+++ b/src/API/InvoiceProcessingPlatform.API/InvoiceProcessingPlatform.API.csproj
@@ -23,6 +23,8 @@
     <ProjectReference Include="..\..\Modules\InvoiceManagement\InvoiceManagement.Infrastructure\InvoiceManagement.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Modules\PaymentTracking\PaymentTracking.Application\PaymentTracking.Application.csproj" />
     <ProjectReference Include="..\..\Modules\PaymentTracking\PaymentTracking.Infrastructure\PaymentTracking.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Modules\VendorManagement\VendorManagement.Application\VendorManagement.Application.csproj" />
+    <ProjectReference Include="..\..\Modules\VendorManagement\VendorManagement.Infrastructure\VendorManagement.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
