feat: add Keycloak integration and secure API endpoints

--- a/src/API/InvoiceProcessingPlatform.API/appsettings.json
+++ b/src/API/InvoiceProcessingPlatform.API/appsettings.json
@@ -11,5 +11,13 @@
     "InvoiceDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True",
     "PaymentDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True",
     "VendorDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True"
+  },
+  "Keycloak": {
+    "Authority": "http://localhost:8888/realms/invoice-platform",
+    "Audience": "invoice-api",
+    "RequireHttpsMetadata": false,
+    "ValidateAudience": true,
+    "ValidateIssuer": true,
+    "ClientSecret": "YOUR_CLIENT_SECRET"
   }
 }
