--- a/src/Services/AIClassification/AIClassification.Application/AIClassification.Application.csproj
+++ b/src/Services/AIClassification/AIClassification.Application/AIClassification.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AIClassification.Domain\AIClassification.Domain.csproj" />
+    <ProjectReference Include="..\..\..\Shared\Shared.Application\Shared.Application.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
