feat: Implement RabbitMQ EventBus for asynchronous integration event publishing

--- a/src/API/InvoiceProcessingPlatform.API/appsettings.json
+++ b/src/API/InvoiceProcessingPlatform.API/appsettings.json
@@ -19,5 +19,11 @@
     "ValidateAudience": true,
     "ValidateIssuer": true,
     "ClientSecret": "YOUR_CLIENT_SECRET"
+  },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "Port": "5672",
+    "UserName": "guest",
+    "Password": "guest"
   }
 }
