--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.8'
 
 services:
+  ai-classification-api:
+    image: ai-classification-api
+    build:
+      context: .
+      dockerfile: src/Services/AIClassification/AIClassification.API/Dockerfile
+    environment:
+    "ApiKey": "AIzaSyBS7_ENSzrO_1OXHPVNodFVGTsPBBxg9Z0"
+      
+    container_name: ai-classification-api
+    networks:
+      - invoice-network
+         # This reads from the .env file
+    ports:
+      - "5000:8080"
   # SQL Server Database
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
