feat: update docker and aiclasfication infrastructure

--- a/src/Services/AIClassification/AIClassification.API/appsettings.json
+++ b/src/Services/AIClassification/AIClassification.API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Database": "Server=.;Database=InvoiceDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Gemini": {
+    "ApiKey": "AIzaSyBS7_ENSzrO_1OXHPVNodFVGTsPBBxg9Z0"
+  }
 }
