feat: update docker and aiclasfication infrastructure

--- a/src/Services/AIClassification/AIClassification.Infrastructure/AIClassification.Infrastructure.csproj
+++ b/src/Services/AIClassification/AIClassification.Infrastructure/AIClassification.Infrastructure.csproj
@@ -1,5 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\AIClassification.Application\AIClassification.Application.csproj" />
+    <ProjectReference Include="..\AIClassification.Domain\AIClassification.Domain.csproj" />
+    <ProjectReference Include="..\..\..\Shared\Shared.Infrastructure\Shared.Infrastructure.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
