--- a/src/Services/AIClassification/AIClassification.Infrastructure/AIClassification.Infrastructure.csproj
+++ b/src/Services/AIClassification/AIClassification.Infrastructure/AIClassification.Infrastructure.csproj
@@ -14,12 +14,12 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.1" />
 
-    <!-- EF Core can stay at 8.0.0 for .NET 8 -->
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <!-- EF Core 10.0.0 for .NET 10 -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
