--- a/src/API/InvoiceProcessingPlatform.API/appsettings.json
+++ b/src/API/InvoiceProcessingPlatform.API/appsettings.json
@@ -23,7 +23,7 @@
   "RabbitMQ": {
     "HostName": "localhost",
     "Port": "5672",
-    "UserName": "guest",
-    "Password": "guest"
+    "UserName": "admin",
+    "Password": "admin123"
   }
 }
