--- a/src/API/InvoiceProcessingPlatform.API/appsettings.json
+++ b/src/API/InvoiceProcessingPlatform.API/appsettings.json
@@ -10,7 +10,9 @@
   "ConnectionStrings": {
     "InvoiceDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True",
     "PaymentDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True",
-    "VendorDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True"
+    "VendorDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True",
+    "ClassificationDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True",
+    "ReportingDb": "Server=localhost,1433;Database=InvoiceProcessingPlatform;User Id=sa;Password=Invoice@SecurePass123!;TrustServerCertificate=True"
   },
   "Keycloak": {
     "Authority": "http://localhost:8888/realms/invoice-platform",
@@ -18,12 +20,15 @@
     "RequireHttpsMetadata": false,
     "ValidateAudience": true,
     "ValidateIssuer": true,
-    "ClientSecret": "YOUR_CLIENT_SECRET"
+    "ClientSecret": "ErJ8Y1gwlPCaNUKITNigcQBSwoZj6V2F"
   },
   "RabbitMQ": {
     "HostName": "localhost",
     "Port": "5672",
     "UserName": "admin",
     "Password": "admin123"
+  },
+  "Gemini": {
+    "ApiKey": "YOUR_GOOGLE_GEMINI_API_KEY_HERE"
   }
 }
